# leaf

./: .gitignore  README.md  index.html  package-lock.json  package.json  test-render.cjs  test-seti.js  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  fs_watch.rs  lib.rs  ollama_client.rs  state.rs
src-tauri/src/commands/: fs_commands.rs  git_commands.rs  graph_commands.rs  mod.rs  model_commands.rs  session_commands.rs  workspace_commands.rs
src-tauri/src/git/: diff.rs  mod.rs  operations.rs  status.rs
src-tauri/src/graph/: context_select.rs  extract_python.rs  extract_rust.rs  mod.rs  parser.rs  schema.rs
src-tauri/src/models/: mod.rs  orchestrator.rs  prompt.rs
src/components/ChatPanel/: ChatPanel.tsx
src/components/DiffReviewPanel/: DiffReviewPanel.tsx
src/components/Editor/: CodeEditor.tsx
src/components/FileExplorer/: FileExplorer.tsx  FileIcon.tsx  SourceControlPanel.tsx
src/components/GraphViewer/: GraphViewer.tsx
src/components/TerminalDrawer/: TerminalDrawer.tsx  TerminalTab.tsx
src/components/WelcomeScreen/: WelcomeScreen.tsx
src/lib/: EditorContext.tsx  monaco-setup.ts  tauri-commands.ts  types.ts
