[package]
name = "leaf"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "leaf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
notify = "7"
ignore = "0.4"
futures-util = "0.3"
anyhow = "1"
thiserror = "1"
content_inspector = "0.2.4"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
tauri-plugin-pty = "0.3.0"
git2 = { version = "0.21.0", features = ["vendored-libgit2"] }
